<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/app_name"
            android:textColor="#FF9800"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_main_menu"
            app:layout_constraintBottom_toBottomOf="@id/appNameText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/appNameText"
            android:contentDescription="@string/menu" />

        <com.haodustudio.DailyNotes.view.customView.RecyclerViewEmptySupport
            android:id="@+id/listView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appNameText" />

        <include
            android:id="@+id/emptyViewLayout"
            layout="@layout/layout_no_note_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/listView"
            app:layout_constraintEnd_toEndOf="@id/listView"
            app:layout_constraintStart_toStartOf="@id/listView"
            app:layout_constraintTop_toTopOf="@id/listView"
            tools:visibility="visible"/>

        <ImageView
            android:id="@+id/startBg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/bg_app_starting"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="正在更新..."/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@drawable/shape_main_menu"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/write"
                style="@style/MainMenuButton"
                android:src="@drawable/ic_main_write"
                android:contentDescription="@string/write_note"/>

            <ImageButton
                android:id="@+id/moodCalendar"
                style="@style/MainMenuButton"
                android:src="@drawable/ic_main_calendar"
                android:contentDescription="@string/mood_calendar"/>

            <ImageButton
                android:id="@+id/find"
                style="@style/MainMenuButton"
                android:src="@drawable/ic_main_find"
                android:contentDescription="@string/search"/>

            <ImageButton
                android:id="@+id/personalize"
                style="@style/MainMenuButton"
                android:src="@drawable/ic_main_personalize"
                android:contentDescription="@string/personalize"/>

            <ImageButton
                android:id="@+id/guide"
                style="@style/MainMenuButton"
                android:src="@drawable/ic_main_guide"
                android:contentDescription="@string/guide"/>

            <ImageButton
                android:id="@+id/about"
                style="@style/MainMenuButton"
                android:src="@drawable/ic_main_about"
                android:contentDescription="@string/about"/>

        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>